# platform.core.appfw.pkgmgr-info

./: CMakeLists.txt  LICENSE  category_parser_list.txt.in  mdparser_list.txt.in  metadata_parser_list.txt.in  parser_path.conf.in  pkgmgr-info.manifest  pkgmgr-info.manifest.in  pkgmgr-info.pc.in  pkgmgr-parser.manifest.in  pkgmgr_smack_list.txt.in  project.config  tag_parser_list.txt.in
debian/: changelog  control  copyright  pkgmgr-info-dev.install.in  rules
include/: SLP_pkgmgr_info_PG.h  pkgmgr-info-basic.h  pkgmgr-info-debug.h  pkgmgr-info-internal.h  pkgmgr-info.h  pkgmgrinfo_basic.h  pkgmgrinfo_debug.h  pkgmgrinfo_private.h  pkgmgrinfo_resource.h  pkgmgrinfo_type.h
packaging/: pkgmgr-info.changes  pkgmgr-info.spec
parser/: CMakeLists.txt  manifest.xsd.in  manifest.xsd.ref  pkgmgr-parser.pc.in  pkgmgr_parser.c  pkgmgr_parser.h  pkgmgr_parser_db.c  pkgmgr_parser_db.h  pkgmgr_parser_internal.h  pkgmgr_parser_privilege.c  pkgmgr_parser_resource.c  pkgmgr_parser_resource.h  pkgmgr_parser_resource_db.c  pkgmgr_parser_resource_db.h  pkgmgr_parser_signature.c  pkgmgr_parser_signature.h  preload_list.txt.in  res.xsd.in
src/: pkgmgr-info-basic.c  pkgmgr-info-internal.c  pkgmgr-info.c  pkgmgrinfo_appinfo.c  pkgmgrinfo_basic.c  pkgmgrinfo_certinfo.c  pkgmgrinfo_client.c  pkgmgrinfo_db.c  pkgmgrinfo_pkginfo.c  pkgmgrinfo_private.c  pkgmgrinfo_resource.c
